force-app/main/default/objects/Opportunity/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <formula>IF (NOT(ISBLANK(Photo_url__c)),IMAGE(Photo_url__c, &apos;Image&apos;, 30, 30),&quot;No Image Is Captured&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Color</label>
    <type>Text</type>
</CustomField>