force-app/main/default/objects/Opportunity/fields/Photo_url__c.field-meta.xml
<CustomField>
    <fullName>Photo_url__c</fullName>
    <label>Photo url</label>
    <type>Url</type>
</CustomField>